removing prepare script as it throws buncha of errors

--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build:js": "babel ./src --out-dir ./dist --ignore test.js",
     "lint": "eslint 'src/**/*.js'",
     "test": "jest",
-    "preversion": "yarn clear & yarn build",
-    "prepare": "npm run build"
+    "preversion": "yarn clear & yarn build"
   },
   "keywords": [
     "react",
